style(most-popular): adjust max-width to avoid layout shifts

--- a/src/style.css
+++ b/src/style.css
@@ -316,7 +316,7 @@ button {
 
   text-align: center;
 
-  max-width: 420px;
+  max-width: 450px;
   padding: 47px 46px 36px 46px;
 
   border: 1px solid #e6dad8;
@@ -403,8 +403,7 @@ button {
   align-items: center;
   flex-direction: column;
 
-  max-width: 420px;
-  min-height: 200px;
+  max-width: 450px;
 
   border-radius: var(--radius-small);
   transition: all 0.3s ease-out;
